--- a/www/index.html
+++ b/www/index.html
@@ -764,7 +764,7 @@
                         left: "-100%"
                     }, 1000, function () {
                         element.className = "topnav";
-                        $(element).css("left", "unset");
+                        $(element).css("left", "");
                     });
                 });
             }
