--- a/www/index.html
+++ b/www/index.html
@@ -766,6 +766,7 @@
                         left: "-100%"
                     }, 1000, function () {
                         x.className = "topnav";
+                        $(element).css("left", "auto")
                     });
                 });
             }
@@ -778,6 +779,7 @@
                     left: "-100%"
                 }, 1000, function () {
                     x.className = "topnav";
+                    $(element).css("left", "auto")
                 });
             });
         }
