--- a/www/index.html
+++ b/www/index.html
@@ -762,6 +762,7 @@
                 var x = document.getElementById("menu");
                 $.each($("#menu a"), function (index, element) {
                     if(index == 0 || index == $("#menu a").length - 1) return;
+                    $(element).css("position", "relative")
                     $(element).animate({
                         left: "-100%"
                     }, 1000, function () {
@@ -775,6 +776,7 @@
             var x = document.getElementById("menu");
             $.each($("#menu a"), function (index, element) {
                 if(index == 0 || index == $("#menu a").length - 1) return;
+                $(element).css("position", "relative")
                 $(element).animate({
                     left: "-100%"
                 }, 1000, function () {
