--- a/www/index.html
+++ b/www/index.html
@@ -71,7 +71,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="width: 100%; height: 100%;"
-                    src="browse.html" id="browse_iframe"></iframe>
+                src="browse.html" id="browse_iframe"></iframe>
             </div>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
@@ -83,9 +83,8 @@
         {{login.html}}
         {{signup.html}}
     </div>
-    <iframe sandbox="allow-scripts allow-same-origin" allow="microphone"
-        style="border:1px solid #fff; width: 100%; height: 100%;" src="canvas.html?algorithm=background"
-        id="background_iframe"></iframe>
+    <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
+        src="canvas.html?algorithm=background" id="background_iframe"></iframe>
     <script>
         var iframe = null;
 
@@ -252,7 +251,7 @@
                 $.ajax({
                     type: 'GET',
                     url: 'algorithms/default.json',
-                    success: function (data) {
+                    success: function(data) {
                         default_create_algorithm = data;
                         this.show_page(pages.PROCESSING, "Connecting...", "Please be patient.", false);
                         this.connect();
@@ -468,7 +467,7 @@
         GlobalState.prototype.show_logged_out_content = function (new_page) {
             $.each($(".logged_in_content"), function () {
                 // if ($(this).is(":visible") && ($(new_page).has($(this)).length > 0 || $(this).parents().has("#menu").length > 0))
-                $(this).css("display", "none");
+                    $(this).css("display", "none");
             });
             $.each($(".logged_out_content"), function () {
                 if ($(this).is(":hidden") && ($(new_page).has($(this)).length > 0 || ($(this).parents().has("#menu").length > 0))) {
@@ -759,31 +758,12 @@
             if (x.className === "topnav") {
                 x.className += " responsive";
             } else {
-                var x = document.getElementById("menu");
-                $.each($("#menu a"), function (index, element) {
-                    if(index == 0 || index == $("#menu a").length - 1) return;
-                    $(element).css("position", "relative")
-                    $(element).animate({
-                        left: "-100%"
-                    }, 1000, function () {
-                        x.className = "topnav";
-                        $(element).css("left", "auto")
-                    });
-                });
+                x.className = "topnav";
             }
         }
         GlobalState.prototype.collapse_nav = function () {
             var x = document.getElementById("menu");
-            $.each($("#menu a"), function (index, element) {
-                if(index == 0 || index == $("#menu a").length - 1) return;
-                $(element).css("position", "relative")
-                $(element).animate({
-                    left: "-100%"
-                }, 1000, function () {
-                    x.className = "topnav";
-                    $(element).css("left", "auto")
-                });
-            });
+            x.className = "topnav";
         }
 
         function is_popover(page) {
