--- a/www/index.html
+++ b/www/index.html
@@ -58,7 +58,7 @@
         </a>
     </div>
     <div id="popovers" style="height: 100%; width: 100%; position: absolute; text-align: center;"></div>
-    <div id="belownav" onclick="state.collapse_nav();">
+    <div id="belownav">
         {{reconnect.html}}
         {{reset.html}}
         {{policy.html}}
