--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
 
 <body>
     <div id="menu" class="topnav" style="display:none !important;" onclick="state.toggle_nav()">
-        <a id="home_button" onclick="event.preventDefault(); window.location.href='#home'; state.refresh_content('#home')"
+        <a id="home_button" onclick="window.location.href='https://www.MetaHumanity.xyz';"
             href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.refresh_content('#browse')" href="#browse">Browse</a>
         <a id="edit_button" onclick="state.refresh_content('#edit')" href="#edit">Edit</a>
