--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
             href="#reset">Reset</a>
         <a id="request_button" style="display: none;" onclick="state.refresh_content('#request')"
             href="#request">Request</a>
-        <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
+        <a href="javascript:void(0);" class="icon" onclick="event.preventDefault(); state.toggle_nav()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
