--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div id="menu" class="topnav" style="display:none !important;" onclick="state.collapse_nav()">
+    <div id="menu" class="topnav" style="display:none !important;">
         <a id="home_button" onclick="state.refresh_content('#home');"
             href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.refresh_content('#browse')" href="#browse">Browse</a>
