--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    <div id="menu" class="topnav" style="display:none !important;" onclick="state.toggle_nav()">
+    <div id="menu" class="topnav">
         <nav>
             <ul>
                 <li><a href="#home">MetaHumanity.xyz</a></li>
