--- a/www/index.html
+++ b/www/index.html
@@ -36,10 +36,10 @@
     <div id="menu" class="topnav">
         <nav>
             <ul>
-                <li><a href="#home">MetaHumanity.xyz</a></li>
-                <li><a href="#browse">Browse</a></li>
-                <li><a href="#edit">Edit</a></li>
-                <li><a href="#create">Create</a></li>
+                <li><a id="home" href="#home">MetaHumanity.xyz</a></li>
+                <li><a id="browse" href="#browse">Browse</a></li>
+                <li><a id="edit" href="#edit">Edit</a></li>
+                <li><a id="create" href="#create">Create</a></li>
                 <li><a id="profile_button" onclick="state.refresh_content('#profile')" class="logged_in_content"
                         href="#profile">Profile</a></li>
                 <li><a id="login_button" onclick="state.refresh_content('#login')" class="logged_out_content"
