--- a/www/index.html
+++ b/www/index.html
@@ -33,30 +33,7 @@
 </head>
 
 <body>
-    <div id="menu" class="topnav">
-        <nav>
-            <ul>
-                <li><a id="home" href="#home">MetaHumanity.xyz</a></li>
-                <li><a id="browse" href="#browse">Browse</a></li>
-                <li><a id="edit" href="#edit">Edit</a></li>
-                <li><a id="create" href="#create">Create</a></li>
-                <li><a id="profile_button" onclick="state.refresh_content('#profile')" class="logged_in_content"
-                        href="#profile">Profile</a></li>
-                <li><a id="login_button" onclick="state.refresh_content('#login')" class="logged_out_content"
-                        href="#login">Login</a></li>
-                <li><a id="signup_button" onclick="state.refresh_content('#signup')" class="logged_out_content"
-                        href="#signup">Sign Up</a></li>
-                <li><a id="logout_button" onclick="state.refresh_content('#logout')" class="logged_in_content"
-                        href="#logout">Log Out</a></li>
-                <li><a id="reset_button" style="display: none;" onclick="state.refresh_content('#reset')"
-                        href="#reset">Reset</a></li>
-                <li><a id="request_button" style="display: none;" onclick="state.refresh_content('#request')"
-                        href="#request">Request</a></li>
-                <li><a href="javascript:void(0);" class="icon"></a></li>
-            </ul>
-        </nav>
-    </div>
-    <!--div id="menu" class="topnav" style="display:none !important;">
+    <div id="menu" class="topnav" style="display:none !important;">
         <a id="home_button" onclick="state.collapse_nav(); state.refresh_content('#home');"
             href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.collapse_nav(); state.refresh_content('#browse')" href="#browse">Browse</a>
@@ -74,12 +51,13 @@
             href="#reset">Reset</a>
         <a id="request_button" style="display: none;" onclick="state.collapse_nav(); state.refresh_content('#request')"
             href="#request">Request</a>
-        <a href="javascript:void(0);" class="icon" onclick="state.toggle_nav()">
+        <a href="javascript:void(0);" class="icon" state.toggle_nav()">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
         </a>
-    </div-->
+        <div>
+    </div>
     <div id="popovers" style="height: 100%; width: 100%; position: absolute; text-align: center;"></div>
     <div id="belownav">
         {{reconnect.html}}
@@ -94,7 +72,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="width: 100%; height: 100%;"
-                    src="browse.html" id="browse_iframe"></iframe>
+                src="browse.html" id="browse_iframe"></iframe>
             </div>
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
@@ -106,9 +84,8 @@
         {{login.html}}
         {{signup.html}}
     </div>
-    <iframe sandbox="allow-scripts allow-same-origin" allow="microphone"
-        style="border:1px solid #fff; width: 100%; height: 100%;" src="canvas.html?algorithm=background"
-        id="background_iframe"></iframe>
+    <iframe sandbox="allow-scripts allow-same-origin" allow="microphone" style="border:1px solid #fff; width: 100%; height: 100%;"
+        src="canvas.html?algorithm=background" id="background_iframe"></iframe>
     <script>
         var iframe = null;
 
@@ -275,7 +252,7 @@
                 $.ajax({
                     type: 'GET',
                     url: 'algorithms/default.json',
-                    success: function (data) {
+                    success: function(data) {
                         default_create_algorithm = data;
                         this.show_page(pages.PROCESSING, "Connecting...", "Please be patient.", false);
                         this.connect();
@@ -491,7 +468,7 @@
         GlobalState.prototype.show_logged_out_content = function (new_page) {
             $.each($(".logged_in_content"), function () {
                 // if ($(this).is(":visible") && ($(new_page).has($(this)).length > 0 || $(this).parents().has("#menu").length > 0))
-                $(this).css("display", "none");
+                    $(this).css("display", "none");
             });
             $.each($(".logged_out_content"), function () {
                 if ($(this).is(":hidden") && ($(new_page).has($(this)).length > 0 || ($(this).parents().has("#menu").length > 0))) {
