--- a/www/delete_account.html
+++ b/www/delete_account.html
@@ -10,7 +10,7 @@
             </div>
             <br>
             To delete your account: type the user name or email of this account, the captcha below, and then
-            click "Delete Account". Click "Cancel" to abort account deletion.
+            click "Delete Account".
             <br>
             <br>
             <table id="delete_table" style="background-color: transparent!important;" class="table table-dark">
