--- a/www/index.html
+++ b/www/index.html
@@ -957,7 +957,13 @@
                 state.wait_for_proto_and_connect()
             }
             window.addEventListener('hashchange', function() {
-                this.refresh_content(window.location.hash);
+                if(is_popover(window.location.hash) ||
+                    window.location.hash == pages.DELETE_ACCOUNT ||
+                    window.location.hash == pages.LOGOUT ||
+                    window.location.hash == pages.RESET)
+                    window.location.hash = pages.HOME;
+                else
+                    this.refresh_content(window.location.hash);
             }.bind(state));
         }
 
