--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,7 @@
             href="#home">MetaHumanity.xyz</a>
         <a id="browse_button" onclick="state.collapse_nav(); state.refresh_content('#browse')" href="#browse">Browse</a>
         <a id="edit_button" onclick="state.collapse_nav(); state.refresh_content('#edit')" href="#edit">Edit</a>
-        <a id="create_button" onclick="state.collapse_nav(); state.refresh_content('#edit')" href="#edit">Create</a>
+        <a id="create_button" onclick="state.collapse_nav(); state.refresh_content('#edit')" href="#create">Create</a>
         <a id="profile_button" onclick="state.collapse_nav(); state.refresh_content('#profile')"
             class="logged_in_content" style="display: none" href="#profile">Profile</a>
         <a id="login_button" onclick="state.collapse_nav(); state.refresh_content('#login')" class="logged_out_content"
@@ -105,7 +105,7 @@
             HOME: "#home",
             BROWSE: "#browse",
             EDIT: "#edit",
-            CREATE: "#edit",
+            CREATE: "#create",
             DELETE_ACCOUNT: "#delete_account",
             PROFILE: "#profile",
             LOGIN: "#login",
