--- a/www/index.html
+++ b/www/index.html
@@ -105,7 +105,7 @@
             HOME: "#home",
             BROWSE: "#browse",
             EDIT: "#edit",
-            CREATE: "#create",
+            CREATE: "#edit",
             DELETE_ACCOUNT: "#delete_account",
             PROFILE: "#profile",
             LOGIN: "#login",
