--- a/www/create.html
+++ b/www/create.html
@@ -1,4 +1,4 @@
-<div class="row connected_content out-of-sight" id="edit">
+<div class="row connected_content out-of-sight" id="create">
     <div class="split row left" style="text-align:center;">
         <div class="col-0 col-sm-0 col-md-0 col-lg-1">
         </div>
